--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -1,71 +1,72 @@
 :root {
-  --font-body: 'Montserrat', sans-serif, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  --font-mono: 'Inconsolata', monospace;
-  --color-bg-darkmode: #121212;
-  --color-bg-lightmode: #FAF9F6;
-  --color-paper-darkmode: #272727;
-  --color-paper-lightmode: #36454F;
-  --color-text-darkmode: #eee;
-  --color-text-lightmode: #222;
-  --color-theme-1: #ff3e00;
-  --color-theme_2: #4075a6;
-  --column-width: 42rem;
-  --column-margin-top: 4rem;
-  font-family: var(--font-body);
-  color-scheme: light dark;
+	--font-body: 'Montserrat', sans-serif, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+		Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	--font-mono: 'Inconsolata', monospace;
+	--color-bg-darkmode: #121212;
+	--color-bg-lightmode: #faf9f6;
+	--color-paper-darkmode: #262626;
+	--color-paper-lightmode: #36454f;
+	--color-text-darkmode: #eee;
+	--color-text-lightmode: #222;
+	--color-theme-1: #ff3e00;
+	--color-theme_2: #4075a6;
+	--column-width: 42rem;
+	--column-margin-top: 4rem;
+	font-family: var(--font-body);
+	color-scheme: light dark;
 }
 
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 body {
-  --text-color: #222;
-  --bkg-color: #fff;
+	--text-color: #222;
+	--bkg-color: #fff;
 }
 
 body.dark-theme {
-  --text-color: #eee;
-  --bkg-color: #121212;
+	--text-color: #eee;
+	--bkg-color: #121212;
 }
 
 @media (prefers-color-scheme: dark) {
 
-  /* defaults to dark theme */
-  body {
-    --text-color: #eee;
-    --bkg-color: #121212;
-  }
+	/* defaults to dark theme */
+	body {
+		--text-color: #eee;
+		--bkg-color: #121212;
+	}
 
-  body.light-theme {
-    --text-color: #222;
-    --bkg-color: #fff;
-  }
+	body.light-theme {
+		--text-color: #222;
+		--bkg-color: #fff;
+	}
 }
 
 body {
-  background: var(--bkg-color);
+	background: var(--bkg-color);
 }
 
 h1,
 p {
-  color: var(--text-color);
+	color: var(--text-color);
 }
 
 html,
 body {
-  margin: 0;
-  padding: 0;
+	margin: 0;
+	padding: 0;
 }
 
 body {
-  width: 100vw;
-  height: 100vh;
-  font-size: 16px;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 400;
+	width: 100vw;
+	height: 100vh;
+	font-size: 16px;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 400;
 }
 
 h1,
@@ -74,6 +75,6 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Inconsolata', monospace;
-  font-weight: 700;
+	font-family: 'Inconsolata', monospace;
+	font-weight: 700;
 }
