--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -1,19 +1,36 @@
 :root {
-	--font-body: 'Montserrat', sans-serif, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-		Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-	--font-mono: 'Inconsolata', monospace;
-	--color-bg-darkmode: #121212;
-	--color-bg-lightmode: #faf9f6;
-	--color-paper-darkmode: #262626;
-	--color-paper-lightmode: #36454f;
-	--color-text-darkmode: #eee;
-	--color-text-lightmode: #222;
-	--color-theme-1: #ff3e00;
-	--color-theme_2: #4075a6;
-	--column-width: 42rem;
-	--column-margin-top: 4rem;
-	font-family: var(--font-body);
-	color-scheme: light dark;
+	&[data-theme="light"] {
+		--color-bg: #faf9f6;
+		--color-paper: #36454f;
+		--color-text: #222;
+		--color-theme-1: #ff3e00;
+		--color-theme-2: #676778;
+		--column-width: 42rem;
+		--column-margin-top: 4rem;
+		font-family: var(--font-body);
+		color-scheme: light;
+		--invert: invert(100%);
+	}
+}
+
+:root {
+	&[data-theme="dark"] {
+		--color-bg: #121212;
+		--color-paper: #262626;
+		--color-text: #eee;
+		--color-theme-1: #ff3e00;
+		--color-theme-2: #676778;
+		--column-width: 42rem;
+		--column-margin-top: 4rem;
+		font-family: var(--font-body);
+		color-scheme: dark;
+		--invert: invert(0%);
+	}
+}
+
+* {
+	transition: background-color 0.2s;
+	transition: color 0.2s;
 }
 
 *,
@@ -23,36 +40,19 @@
 }
 
 body {
-	--text-color: #222;
-	--bkg-color: #fff;
-}
-
-body.dark-theme {
-	--text-color: #eee;
-	--bkg-color: #121212;
-}
-
-@media (prefers-color-scheme: dark) {
-
-	/* defaults to dark theme */
-	body {
-		--text-color: #eee;
-		--bkg-color: #121212;
-	}
-
-	body.light-theme {
-		--text-color: #222;
-		--bkg-color: #fff;
+	&[data-theme="dark"] {
+		color: var(--color-text);
+		background-color: var(--color-bg);
 	}
 }
 
-body {
-	background: var(--bkg-color);
+.main {
+	filter: var(--invert);
 }
 
 h1,
 p {
-	color: var(--text-color);
+	color: var(--color-text);
 }
 
 html,
@@ -77,4 +77,5 @@ h5,
 h6 {
 	font-family: 'Inconsolata', monospace;
 	font-weight: 700;
+	color: var(--color-text);
 }
