--- a/src/theme/_smui-theme.scss
+++ b/src/theme/_smui-theme.scss
@@ -3,23 +3,34 @@
 @use '@material/theme/color-palette';
 
 // Svelte Colors!
-@use '@material/theme/index' as theme with (
-  $primary: #ff3e00,
+@use '@material/theme/index' as theme with ($primary: #ff3e00,
   $secondary: #676778,
   $surface: #fff,
   $background: #fff,
-  $error: color-palette.$red-900
-);
+  $error: color-palette.$red-900);
+
+* {
+  transition: background-color 0.2s;
+  transition: background 0.2s;
+  transition: color 0.2s;
+}
 
 html,
 body {
-  background-color: theme.$surface;
-  color: theme.$on-surface;
+  &[data-theme="light"] {
+    background-color: theme.$surface;
+    color: theme.$on-surface;
+  }
 }
 
 a {
-  color: #40b3ff;
+  &[data-theme="light"] {
+    color: #40b3ff;
+  }
 }
+
 a:visited {
-  color: color.scale(#40b3ff, $lightness: -35%);
+  &[data-theme="light"] {
+    color: color.scale(#40b3ff, $lightness: -35%);
+  }
 }
