--- a/src/theme/dark/_smui-theme.scss
+++ b/src/theme/dark/_smui-theme.scss
@@ -3,23 +3,34 @@
 @use '@material/theme/color-palette';
 
 // Svelte Colors! (Dark Theme)
-@use '@material/theme/index' as theme with (
-  $primary: #ff3e00,
+@use '@material/theme/index' as theme with ($primary: #ff3e00,
   $secondary: color.scale(#676778, $whiteness: -10%),
   $surface: color.adjust(color-palette.$grey-900, $blue: +4),
   $background: #000,
-  $error: color-palette.$red-700
-);
+  $error: color-palette.$red-700);
+
+* {
+  transition: background-color 0.2s;
+  transition: background 0.2s;
+  transition: color 0.2s;
+}
 
 html,
 body {
-  background-color: #000;
-  color: theme.$on-surface;
+  &[data-theme="dark"] {
+    background-color: #000;
+    color: theme.$on-surface;
+  }
 }
 
 a {
-  color: #40b3ff;
+  &[data-theme="dark"] {
+    color: #40b3ff;
+  }
 }
+
 a:visited {
-  color: color.scale(#40b3ff, $lightness: -35%);
+  &[data-theme="dark"] {
+    color: color.scale(#40b3ff, $lightness: -35%);
+  }
 }
